fix collapsing backup status

--- a/client/assets/styles/scss/modals/modals-isolation.scss
+++ b/client/assets/styles/scss/modals/modals-isolation.scss
@@ -45,12 +45,11 @@
       padding-right: 6px;
     }
 
-    //- backup status
+    // backup status
     > .small {
       color: $gray-light;
       cursor: default;
-      font-style: italic;
-      margin-right: 3px;
+      flex: 0 0 auto;
     }
   }
 
@@ -59,6 +58,7 @@
   }
 
   .icons-check {
+    bottom: 1px;
     height: 18px;
     width: 18px;
   }
@@ -78,7 +78,6 @@
     // "Branch uses a modified configuration"
     + .small {
       bottom: 1px;
-      color: $gray;
       font-size: 11px;
       position: absolute;
       right: 12px;
